Bug 914870 - Reduce mp3 parse chunk buffer size to 32KiB. r=doublec