content/media/omx/OmxDecoder.cpp
@@ -999,9 +999,11 @@ void OmxDecoder::ReleaseAllPendingVideoBuffersLocked()
 
 bool OmxDecoder::ProcessCachedData(int64_t aOffset, bool aWaitForCompletion)
 {
-  // We read data in chunks of 8 MiB. We can reduce this
+  // We read data in chunks of 32 KiB. We can reduce this
   // value if media, such as sdcards, is too slow.
-  static const int64_t sReadSize = 8 * 1024 * 1024;
+  // Because of SD card's slowness, need to keep sReadSize to small size.
+  // See Bug 914870.
+  static const int64_t sReadSize = 32 * 1024;
 
   NS_ASSERTION(!NS_IsMainThread(), "Should not be on main thread.");
 
